--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   --calculadora-fondo: rgba(178, 185, 194, 0.918);
   --body-bg-color: rgba(65, 54, 54, 0.164);
   --tamanio-texto: 25px;
-  --google-font--Nova-Square: 'Nova Square', cursive;
+  --google-font--Nova-Square: "Nova Square", cursive;
 }
 
 body {
@@ -70,7 +70,7 @@ body {
 }
 
 .display {
-  font-family:var(--google-font--Nova-Square);
+  font-family: var(--google-font--Nova-Square);
   letter-spacing: 4px;
   caret-color: transparent;
   padding: 0.1em 0em;
@@ -82,7 +82,7 @@ body {
 }
 
 input::placeholder {
-  color:var(--color-numero);
+  color: var(--color-numero);
   opacity: 1;
 }
 
@@ -127,10 +127,25 @@ input::placeholder {
 }
 
 @media screen and (max-width: 480px) {
-  body{
+  body {
     overflow: hidden;
   }
   .contenedor {
     width: 345px;
+  }
+
+  .otras__funciones {
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 25px;
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .brand {
+    width: 90%;
+    margin: 5px;
+    padding: 5px;
   }
 }
